--- a/aks-deploy-from-acr.yaml
+++ b/aks-deploy-from-acr.yaml
@@ -12,15 +12,9 @@ spec:
       labels:
         app: springboot-app
     spec:
-<<<<<<< HEAD
-      containers:      
-      - name: testconreg12
-=======
       containers:
-<<<<<<< HEAD
-      - name: myspringbootapp1
->>>>>>> 3cb1b8c182cc0cf57979b32ac93b03d2519a1baf
-        image: testconreg12.azurecr.io/springbootapp:latest
+      - name: my-springboot-app-shakir
+        image: testconreg12.azurecr.io/springbootappnew:#{Build.BuildId}#
         imagePullPolicy: Always
         ports:
         - containerPort: 8085
