--- a/aks-deploy-from-acr.yaml
+++ b/aks-deploy-from-acr.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: my-springboot-app-shakir
-        image: testconreg12.azurecr.io/springbootappnew:latest
+        image: testconreg12.azurecr.io/springbootappnew:188
         imagePullPolicy: Always
         ports:
         - containerPort: 8085
