--- a/aks-deploy-from-acr.yaml
+++ b/aks-deploy-from-acr.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: springboot-app
-        image: testconreg12.azurecr.io/springbootappnew:#$(Build.BuidId)#
+        image: testconreg12.azurecr.io/springbootappnew:v1
         imagePullPolicy: Always
         ports:
         - containerPort: 8085
